--- a/style.css
+++ b/style.css
@@ -1,70 +1,100 @@
-body,
-h1,
-p {
+body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    background-color: rgb(196, 241, 255);
     text-align: center;
 }
 
 header {
-    background-color: #1f50aa;
+    background-color: #0787ff;
     color: white;
-    padding: 20px;
+    padding: 1px; /* ระยะห่างด้านในกล่อง */
 }
 
-
 nav {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    background-color: #0787ff;
-    padding: 10px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #1f50aa;
+    padding: 5px;
+    z-index: 1000;
+    text-align: center;
 }
 
 nav a {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    padding: 10px 15px;
+    display: inline-block;
+    transition: 0.3s;
 }
 
 nav a:hover {
-    color: rgb(0, 0, 0);
+    color: black;
+    background-color: #00aeff;
+    border-radius: 20px;
 }
 
 .content {
+    margin-top: 80px;
     display: flex;
     justify-content: center;
-    gap: 20px;
-    margin: 20px;
+    font-size: 18px;
 }
 
 .box {
-    background-color: rgb(96, 210, 248);
+    background-color: #ebf0f1;
     padding: 20px;
     border-radius: 10px;
-    width: 30%;
+    width: 95%;
+    text-align: left;
 }
 
 footer {
     background-color: #0787ff;
     color: white;
-    padding: 10px;
+    padding: 15px;
     margin-top: 20px;
+    font-size: 20px;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    text-decoration: none;
+    color: white;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.facebook {
+    background: #3b5998;
+}
+
+.instagram {
+    background: #e4405f;
+}
+
+.btn:hover {
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 768px) {
-    nav {
-        flex-direction: column;
-        text-align: center;
-    }
-
     .content {
         flex-direction: column;
+        align-items: center;
     }
 
     .box {
-        width: 80%;
-        margin: 0 auto;
+        width: 90%;
+    }
+
+    nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
