--- a/style.css
+++ b/style.css
@@ -99,18 +99,15 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
-    .content {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .box {
-        width: 90%;
-    }
-
     nav {
-        display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    nav a {
+        display: block;
+        padding: 10px;
+        width: 100%;
+        text-align: center;
     }
 }
