--- a/style.css
+++ b/style.css
@@ -116,7 +116,9 @@ footer {
     justify-content: center;
     background-color: #1f50aa;
     padding: 10px;
-    
+    transition: all 0.3s ease-in-out; /* เพิ่ม Animation */
+    transform: translateY(-100%);
+    opacity: 0;
 }
 
 
@@ -148,4 +150,6 @@ footer {
 
 .show {
     display: flex !important;
+    transform: translateY(0);
+    opacity: 1;
 }
